# mighty-test

./: .env  .gitignore  Cargo.toml  README.md  docker-compose.yml  postgres-docker.sh
migrations/2021-08-22-152431_create/: down.sql  up.sql
src/: config.rs  db.rs  main.rs  models.rs  schema.rs  service.rs
src/db/: like.rs  likes.rs  photo.rs  post.rs  user.rs
src/service/: like.rs  mighty_test.rs  mod.rs  photo.rs  post.rs
