[package]
name = "mighty-test"
version = "0.1.0"
authors = ["Felipe Diniello <felipe.diniello@globant.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# dotenv = "*"
# rocket = "0.4.10"
rand = "0.8.4"
toml = "0.5.8"
serde = {version = "1.0.118", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
diesel = { version = "1.4.6", features =  ["chrono", "postgres", "r2d2"] }

[dependencies.rocket_contrib]
version = "0.4.10"
default-features = false
features = ["json", "uuid", "serde"]